2002-03-20  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-halfdump-command-arguments)[w3mmee]: Add `image'
	to the -dump argument only if `w3m-treat-image-size' is non-nil.
	

2002-03-20  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-form.el (w3m-form-parse-and-fontify): If not detect `usemap'
	attribute of `img_alt', use `value' attribute of `input_alt' for
	the select map name; W3M removes `usemap' attribute when
	"display_image=off".

2002-03-19  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-w3m-attributes): Ignore `w3m-document-charset' when
	w3m-m17n.

2002-03-19  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-fontify-images): Parse width and height attributes of
	img_alt.
	(w3m-toggle-inline-images-internal): Set `size' argument of
	w3m-create-image.
	(w3m-highlight-current-anchor): Fixed logic.

	* w3m-xmas.el (w3m-create-image): Added optional argument `size'
	(ignored currently).

	* w3m-e21.el (w3m-imagick-convert-program): Use w3m-which to set
	initial value.
	(w3m-resize-images): New user option.
	(w3m-resize-image): New function.
	(w3m-create-image): Added optional argument `size'; Changed return
	value.
	(w3m-insert-image): Call w3m-resize-image if size is specified.
	(w3m-imagick-convert-buffer): Accept nil for from-type and to-type.

2002-03-18  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-form.el (w3m-form-mee-select-value): Fix.
	(w3m-form-parse-and-fontify): If w3m-type is not w3mmee, use last
	form object as current form.

2002-03-18  KAMO Tomoyuki  <kamo@ITmanage.co.jp>
	
	* shimbun/sb-tcup.el (shimbun-tcup-get-group-key): Follow the
	structual change of the master site.
	(shimbun-tcup-make-id): Ditto.
	
2002-03-18  Masamichi Goudge M.D. <Matanuki@Goudge.org>

	* shimbun/sb-orca.el: New file.

2002-03-18  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-highlight-current-anchor): New implementation.
	(w3m-highlight-current-anchor-1): New function.
